<resources>
    <string name="app_name">ArabicMorph</string>
    <string name="arabic_morph">Arabic Morph</string>
    <string name="enter_word">Enter word in Fusha Arabic</string>
    <string name="discover_text">Discover the Beauty of Arabic Morphology!</string>
    <string name="need_help">Need some help?</string>
    <string name="menu_icon">Menu Icon</string>
    <string name="help_icon">Help Icon</string>
    <string name="search_icon">Search Icon</string>
    <string name="background_image_desc">Background Image Home</string>
    <string name="overlay_image_desc">Overlay Image Home</string>
    <string name="empty_history">No History Found</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="daily_notif">Daily Notification</string>
    <string name="set_notific">Set Reminder Notification for Daily</string>

    <string name="title_past">الماضي المعلوم</string>
    <string name="title_present">المضارع المعلوم</string>
    <string name="title_command">الأمر</string>
    <string name="add_to_favorite">Add to Favourite</string>
    <string name="jamid_detect">Jamid Detector</string>
    <string name="reveal_text">Reveal the True Nature: Jāmid or Musytaq?</string>
    <string name="result_word">Detector Result</string>
    <string name="description_will_be_shown_here">Description Result</string>
    <string name="word_not_found_please_try_again">Word Not Found</string>
    <string name="icon_desc">Icon description</string>
    <string name="favourite">Favourite</string>
    <string name="empty_favourite">No Favourite Found</string>
    <string name="word_history">Arabic Word</string>
    <string name="word_favourite">Arabic Word</string>
    <string name="country_label">Ar</string>

    <string name="back">Back</string>
    <string name="app_info_title">App Info</string>
    <string name="about_title">About Arabic Morph</string>
    <string name="about_description">ArabicMorph is a mobile application designed to help users understand and analyze the morphology of Arabic words. Users can enter a single Arabic word in Fusha to generate various forms of the word, as well as detect whether the word is a jamid (non-derived word) or musytaq (derived word).</string>
    <string name="user_manual_title">User Manual</string>
    <string name="verb_conjugator_title">Verb Conjugator</string>
    <string name="verb_conjugator_description">Input a Fusha Arabic word, then click the search icon to start conjugating.</string>
    <string name="jamid_detector_title">Jamid Detector</string>
    <string name="jamid_detector_description">Input a Fusha Arabic word, then click the search icon to start detecting.</string>
    <string name="favourite_title">Favourite</string>
    <string name="favourite_description">Click the star icon at the bottom of the screen to add to favorites.</string>
    <string name="history_title">History</string>
    <string name="history_description">Automatically fills in when doing Verb Conjugation or Jamid Detection.</string>
    <string name="menu_conjugator">Verb Conjugator</string>
    <string name="menu_detector">Jamid Detector</string>
    <string name="menu_setting">Setting</string>
    <string name="menu_info">App Info</string>
    <string name="setting">Setting</string>
    <string name="daily_notification">Daily Notification</string>
    <string name="set_notification">Set Reminder Notification for Daily</string>
    <string name="verb_conjugator">مع</string>
    <string name="history">History</string>
    <string name="appwidget_text">ArabicMorph</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="enter_word_to_search">Enter a fusha arabic word to search</string>
    <string name="example_result_description">Example result description</string>
    <string name="reveal_empty_history_text">Your history will appear here once you analyze a word.\nStart by entering a word to begin!</string>
    <string name="reveal_empty_favourite_text">You can add an item to your favourite by clicking “Star Icon”</string>

    <string name="xp_counter_initial">XP: 0</string>
    <string name="xp_counter_text">XP: %1$d</string>
    <string name="splash_text">Welcome to ArabicMorph!</string>
    <string name="challenge_completed">Challenge Completed!</string>
    <string name="notif_challenge">Congratulations! You\'ve learned 5 new words and earned 10 XP!</string>
    <string name="delete">Delete history</string>
    <string name="save">Save to History</string>
    <string name="prediction_label">Jamid Detector Result</string>
    <string name="result">Result</string>
    <string name="verb_info">Verb Info:</string>
    <string name="madhi">Madhi</string>
    <string name="mudhori">Mudhori</string>
    <string name="amar">Amar</string>
    <string name="future">Future</string>
    <string name="haraka">Haraka</string>
    <string name="transitive">Transitive</string>
    <string name="verb">Verb</string>

</resources>
