<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_detect"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF6F6">

    <View
        android:id="@+id/rectangle_1"
        android:layout_width="420dp"
        android:layout_height="20dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="#D49B9B"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/menu_icon"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="25dp"
        android:layout_alignParentStart="true"
        android:src="@drawable/icon_menu"
        android:contentDescription="@string/menu_icon" />

    <TextView
        android:id="@+id/jamid_detec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="110dp"
        android:text="@string/jamid_detect"
        android:textStyle="bold"
        android:fontFamily="sans-serif"
        android:textSize="20sp"
        android:textColor="@color/text_primary" />

    <RelativeLayout
        android:id="@+id/search_bar_container"
        android:layout_width="322dp"
        android:layout_height="42dp"
        android:layout_marginTop="180dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/search_bg">

        <TextView
            android:id="@+id/enter_word"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="50dp"
            android:layout_alignParentStart="true"
            android:textSize="14sp"
            android:text="@string/enter_word"
            android:textAppearance="@style/SearchInputTextStyle" />

        <FrameLayout
            android:id="@+id/search_button_background"
            android:layout_width="53dp"
            android:layout_height="42dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="2dp"
            android:background="@drawable/rectangle_3">

            <ImageView
                android:id="@+id/search_icon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:contentDescription="@string/search_icon"
                android:src="@drawable/icon_search"
                android:tint="@android:color/white"
                tools:ignore="UseAppTint" />
        </FrameLayout>
    </RelativeLayout>

    <FrameLayout
        android:id="@+id/image_stack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">

        <ImageView
            android:id="@+id/background_image"
            android:layout_width="206dp"
            android:layout_height="128dp"
            android:layout_gravity="center"
            android:src="@drawable/background_image"
            android:contentDescription="@string/background_image_desc"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/overlay_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:src="@drawable/overlay_image"
            android:contentDescription="@string/overlay_image_desc"
            tools:ignore="ContentDescription" />
    </FrameLayout>

    <TextView
        android:id="@+id/discover_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="459dp"
        android:layout_centerHorizontal="true"
        android:textSize="13sp"
        android:textStyle="bold"
        android:text="@string/text_jamid"
        android:textAppearance="@style/DiscoverTextStyle" />
    </RelativeLayout>